fix: Show widget close icon on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@ button {
 
 .oneroute_widget .top_section .close {
   position: absolute;
+  display: block !important;
   top: 10px;
   right: 10px;
 }
